Fix span alignment

--- a/style.css
+++ b/style.css
@@ -153,6 +153,10 @@ article {
     display: block;
 }
 
+span {
+    float: left;
+}
+
 .panel {
     display: table-cell;
 }
